Styles added to the page DIV's added where needed to align content followed the font size and color palette
Page spacing is roughed in.

--- a/index.html
+++ b/index.html
@@ -8,39 +8,60 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <div class="container-1">
     <div class="header">
-        <div>Header Logo</div>
-        <div class="header-links">
-            <div>Header link one</div>
-            <div>Header link two</div>
-            <div>Header link three</div>
-        </div>
+        <div class="logo">Header Logo</div>
+        <ul class="header-links">
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
     </div>
-    <div>
-        <div>This website is awsome</div>
-        <P>This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast.</P>
-        <button>Sign up</button>
+    <div class="inner-c-1">
+        <div class="hero">This website is awsome
+        <div id="hero-secondary">This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast.</div>
+        <button class="button-1">Sign up</button>
+        </div>
+    <div class="img">
         <img alt="This is a placeholder for an image">
     </div>
-    <div>Some random information</div>
+    </div>
+    </div>
+    
     <div class="container-2">
-        <div>This is some subtext under an illustration or image</div>
-        <div>This is some subtext under an illustration or image</div>
-        <div>This is some subtext under an illustration or image</div>
-        <div>This is some subtext under an illustration or image</div>
+        <div class="info-header">Some random information</div>
+    <div class="inner-c-2">
+        <div class="info">
+        <div class="info-image"></div>
+        This is some subtext under an illustration or image</div>
+        <div class="info">
+        <div class="info-image"></div>
+        This is some subtext under an illustration or image</div>
+        <div class="info">
+        <div class="info-image"></div>
+        This is some subtext under an illustration or image</div>
+        <div class="info">
+        <div class="info-image"></div>
+        This is some subtext under an illustration or image</div>
+    </div>
     </div>
     <div class="container-3">
-        <div> This is an inspriing quote, or a testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who Knows?
+        <div class="inner-c-3">
+        <div> This is an inspring quote, or a testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who Knows?
             All I know is that it looks nice.
         </div>
-        <div>-Thor, God of Thunder</div>
+        <div class="author">-Thor, God of Thunder</div>
+    </div>
     </div>
     <div class="container-4">
         <div class="inner-c-4">
-        <div>Call to action! It's time!</div>
+        <div>Call to action! It's time!
         <div>Sign up fo our product by clicking that button right over there!</div>
-        <button>Sign up</button>
-        </div>
+         </div>
+        <button class="button-2">Sign up</button>
+    </div>
+    </div>
+    <div class="footer"> dstonedev creation 2022
     </div>
 
 </body>
